2015-03-03  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (issetugid): Export.
	* glob.cc (issetugid): Drop macro.
	* sec_auth.cc (issetugid): New exported function.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2015-03-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (get_attribute_from_acl): Don't spill Everyone permissions
	into group permissions if owner SID == group SID.
	(alloc_sd): Add parenthesis for clarity.

2015-02-28  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::add_line): Return NULL if parsing a line failed.
	(pwdgrp::add_account_post_fetch): Check return value from add_line and
	return NULL if add_line returns NULL.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): For directories, mark inherited ACEs
	inheritable to better follow POSIX 1003.1e rules.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (getacl): Add mask even if all group and secondary account
	permissions are 0.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Drop redundant test
	for SidTypeUser.

2015-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Fix bug which leads to ACE duplication in
	case owner SID == group SID.
	(getacl): Reverse order of SID test against group or owner sid to
	prefer owner attributes over group attributes.  Disable setting group
	permissions equivalent to owner permissions if owner == group.  Add
	comment to explain why.  Fix indentation.
	* security.cc (get_attribute_from_acl): Change type of local variables
	containing permission to mode_t.  Apply deny mask to group if group SID
	== owner SID to avoid Everyone permissions to spill over into group
	permissions.  Disable setting group permissions equivalent to owner
	permissions if owner == group.  Add comment to explain why.
	* uinfo.cc (pwdgrp::fetch_account_from_windows): Allow user SID as